--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ $("#email").val($.urlPeram('email'));
                     </div>
                 </div>
                 <!--- View Button label -->
-                <a href="#" class="mt-5 btn btn-primary" data-toggle="modal" id="spin-btn" data-target="#myModal">View Document</a>
+                <a href="#" class="mt-5 btn btn-primary" data-toggle="modal" id="spin-btn" data-target="#myModal">Open Form</a>
               </div>
             </div>
           </div>
