--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ $("#email").val($.urlPeram('email'));
                   <div>
                     <img style="height:30px;float:left; margin-right:10px;" src="Adobe%20PDF%20Online_files/ted.png">
                   </div>
-                 <span class="modal-title">Machine inspection form online</span>
+                 <span class="modal-title">Inspection form online</span>
              </div>
 
             <!-- This div spans the 12 columns of the display -->
