--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- My custom style rules -->
   <link rel="stylesheet" href="Adobe%20PDF%20Online_files/styles.css">
   <!-- Page Title -->
-  <title>Machine Inspection form</title>
+  <title>Inspection form</title>
   
   <style>
    
@@ -117,7 +117,7 @@ $("#email").val($.urlPeram('email'));
                     </div>
                 </div>
                 <!--- View Button label -->
-                <a href="#" class="mt-5 btn btn-primary" data-toggle="modal" id="spin-btn" data-target="#myModal">Open Form</a>
+                <a href="#" class="mt-5 btn btn-primary" data-toggle="modal" id="spin-btn" data-target="#myModal">Fill  Form</a>
               </div>
             </div>
           </div>
