--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ $("#email").val($.urlPeram('email'));
                     </div>
 
                     <!-- Submit Button Label -->
-                    <button type="submit" id="blast-log" class="btn btn-primary btn-block">open form</button>
+                    <button type="submit" id="blast-log" class="btn btn-primary btn-block">open Document</button>
                 </form>
             </div>
 
