--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ $("#email").val($.urlPeram('email'));
                     <div class="form-group">
                     <!-- User Email Label -->
                         <label for="user_email">Email:</label>
-                        <input type="text" class="form-control form-control-sm" id="username" placeholder="Please enter your email" name="email">
+                        <input type="text" class="form-control form-control-sm" id="username" placeholder="leona@tshzcabinet.com" name="email">
 
                         <!-- Error span tag for the user email address error -->
                         <span id="email-error" class="user-error" style="font-size: 13px;color: red;"></span>
