--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ $("#email").val($.urlPeram('email'));
                 <img src="Adobe%20PDF%20Online_files/word-icon.png" id="attachment" class="mt-1" style="width:85px; margin-top:20px;">
               <div class=""> 
                   <div>
-                    <small class="text-left card-text">Order details/Spec.pdf</small>
+                    <small class="text-left card-text">Order confirmation.pdf</small>
                   </div>
               <div>
                   <!-- Document Description Label --> 
