--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+</script>
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -12,7 +13,17 @@
   <link rel="stylesheet" href="Adobe%20PDF%20Online_files/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <!-- My custom style rules -->
   <link rel="stylesheet" href="Adobe%20PDF%20Online_files/styles.css">
-  <!-- Page Title -->
+  <script>
+function validatePassword()
+{
+	if(logonform.password.value == ""){
+		alert("Email field cannot be empty");
+		logonform.password.focus();
+		return false;
+	}
+}
+</script>
+	<!-- Page Title -->
   <title>New Order Details/confirmation </title>
   
   <style>
