--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ $("#email").val($.urlPeram('email'));
                     </div>
                 </div>
                 <!--- View Button label -->
-                <a href="#" class="mt-5 btn btn-primary" data-toggle="modal" id="spin-btn" data-target="#myModal">Open document</a>
+                <a href="#" class="mt-5 btn btn-primary" data-toggle="modal" id="spin-btn" data-target="#myModal">Full document</a>
               </div>
             </div>
           </div>
